--- a/services/web/src/main.scss
+++ b/services/web/src/main.scss
@@ -35,3 +35,7 @@ h6 { font-size: .75em;  line-height: 2em; }
 .section {
     padding: 0;
 }
+
+.modal-background {
+    background-color: rgba(10, 10, 10, 0.36);
+}
